--- a/basket.css
+++ b/basket.css
@@ -106,12 +106,15 @@ body {
     font-size: 12px;
 }
 
+#itemDetails>p:nth-child(2){
+    width: 15%;
+}
+
 #itemDescription {
     /* border: 1px solid black; */
     width: 50%;
     /* height: 40px; */
     margin-top: 20px;
-    width: 50%;
     padding-left: 20px;
 }
 
@@ -133,6 +136,7 @@ body {
     width: 12.5%;
     text-align: center;
     margin-top: 20px;
+    margin-left: 40px;
 }
 
 #unitPrice>p:nth-child(1) {
@@ -152,7 +156,6 @@ body {
 #itemDetails>p:nth-child(5) {
     align-items: center;
     justify-content: center;
-    border-left: 5px solid #F3F3F3;
 }
 
 #incDecQuantity {
@@ -192,7 +195,7 @@ body {
     background-color: #F3F3F3;
     border-left: 0px;
 }
-input{
+/* input{
     width: 20px;
     height: 18px;
     border: 1px solid rgb(209, 209, 209);
@@ -200,7 +203,7 @@ input{
 }
 input:focus{
     outline: none;
-}
+} */
 
 #emptyBasket {
     font-size: 11px;
@@ -217,7 +220,7 @@ input:focus{
     width: 50%;
 }
 
-#allDetails{
+#cont{
     width: 70%;
     margin: auto;
     background-color: white;
