--- a/basket.css
+++ b/basket.css
@@ -106,7 +106,7 @@ body {
     font-size: 12px;
 }
 
-#itemDetails>p:nth-child(2){
+#itemDetails>p:nth-child(2) {
     width: 15%;
 }
 
@@ -195,6 +195,7 @@ body {
     background-color: #F3F3F3;
     border-left: 0px;
 }
+
 /* input{
     width: 20px;
     height: 18px;
@@ -220,10 +221,75 @@ input:focus{
     width: 50%;
 }
 
-#cont{
+#cont {
     width: 70%;
     margin: auto;
     background-color: white;
+    padding-left: 25px;
+    padding-right: 20px;
+}
+
+#containerAfterProductDetail {
+    /* border: 1px solid black; */
+    width: 70%;
+    margin: auto;
+    padding-left: 25px;
+    padding-right: 20px;
+    display: flex;
+    justify-content: space-between;
+    background-color: white;
+    padding-top: 20px;
+}
+
+#checkoutDiv {
+    border: 1px solid black;
+    border-radius: 10px;
+    background-color: white;
+}
+
+/* #productDetailsEndHrLine{
+    
+} */
+
+#checkoutDiv1 {
+    border: 1px solid black;
+    height: 65%;
+}
+
+/* #checkoutDiv2 {
+    border: 1px solid black;
+    height: 14%;
+} */
+
+#checkoutDiv3 {
+    border: 1px solid black;
+    height: 34%;
+}
+
+#checkoutTotalsD1 {
+    border-bottom: 1px solid black;
+}
+
+#checkoutSubtotal {
+    width: 70%;
+    display: flex;
+    justify-content: space-between;
+    border: 1px solid black;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin-left: 5px;
+    margin-right: 5px;
+}
+
+#checkoutTotal{
+    width: 70%;
+    display: flex;
+    justify-content: space-between;
+    border: 1px solid black;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin-left: 5px;
+    margin-right: 5px;
 }
 
 /* font-family: 'Roboto', sans-serif; */
